--- a/src/shared/astro/Navigation.astro
+++ b/src/shared/astro/Navigation.astro
@@ -93,14 +93,7 @@ const Items = depth ? Fragment : "div";
                       {page?.title}
                       {children && (
                         <div class="dropdown-indicator">
-                          <Icon
-                            name={
-                              !depth
-                                ? "fa6-solid:caret-down"
-                                : "fa6-solid:caret-right"
-                            }
-                            height="2rem"
-                          />
+                          <Icon name="fa6-solid:caret-down" height="2rem" />
                         </div>
                       )}
                     </span>
@@ -214,7 +207,7 @@ const Items = depth ? Fragment : "div";
                 },
               }),
               shift(),
-              arrow({ element: caret }),
+              arrow({ element: caret, padding: 10 }),
             ],
           }
         : {
@@ -237,7 +230,7 @@ const Items = depth ? Fragment : "div";
                 },
               }),
               flip(),
-              arrow({ element: caret }),
+              arrow({ element: caret, padding: 10 }),
             ],
           };
 
@@ -258,6 +251,7 @@ const Items = depth ? Fragment : "div";
               top: `${y}px`,
             });
             if (middlewareData.arrow) {
+              console.log(middlewareData.arrow);
               let turn,
                 top,
                 right,
@@ -265,7 +259,7 @@ const Items = depth ? Fragment : "div";
                 left = null;
               let direction = placement.replace(/-.*/, "");
               let heightOffset = `${-caretHeight}px`;
-              let widthOffset = `${-caretHeight * 1.5}px`;
+              let widthOffset = `${-caretHeight}px`;
 
               // Position arrow based on placement direction
               switch (direction) {
@@ -582,12 +576,24 @@ const Items = depth ? Fragment : "div";
   }
 
   .depth-1 a span {
-    padding: 5px 10px;
-    margin: 10px;
+    padding: 0 10px;
+    margin: 0 5px;
+  }
+
+  .depth-1 li:first-of-type > a span {
+    margin-top: 5px;
+  }
+
+  .depth-1 li:last-of-type > a span {
+    margin-bottom: 5px;
   }
 
   li.depth-0 > a span {
     padding: 10px 20px;
+  }
+
+  .dropdown-open > a .dropdown-indicator {
+    transform: rotate(180deg);
   }
 
   @media screen and (min-width: 769px) {
@@ -636,8 +642,15 @@ const Items = depth ? Fragment : "div";
       pointer-events: none;
     }
 
+    .depth-1 a .dropdown-indicator {
+      transform: rotate(-90deg);
+    }
+
+    .depth-1 .dropdown-open > a .dropdown-indicator {
+      transform: rotate(90deg);
+    }
+
     .dropdown-open > ul {
-      // display: flex !important;
       visibility: visible;
       pointer-events: all;
 
@@ -646,24 +659,25 @@ const Items = depth ? Fragment : "div";
       }
     }
 
-    .dropdown-open > a .dropdown-indicator {
-      transform: rotate(180deg);
-    }
-
     .dropdown-caret {
-      display: none;
       position: absolute;
-      width: 40px;
+      width: 20px;
       height: 20px;
-      filter: drop-shadow(2px 2px 16px #00000044);
-      z-index: -2;
+      filter: drop-shadow(2px 2px 16px #00000088);
 
       // Prevent shadow overlapping own menu
       background-color: rgb(var(--header-background-color));
       clip-path: polygon(-200% -200%, 300% -200%, 300% 100%, -200% 100%);
 
-      mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 1024 512'%3e%3cpath d='M256 73.901c17.459 0 33.813 15.769 43.788 42.222l103.571 274.664C431.996 466.729 478.946 512 529.067 512H-17.067c50.121 0 97.071-45.271 125.708-121.213l103.571-274.664C222.187 89.67 238.541 73.901 256 73.901' style='fill:currentColor' transform='matrix(1.875 0 0 1.16868 32 -86.367)'/%3e%3c/svg%3e");
+      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M512 512.002c0 141.385 114.616 256.001 256 256.001H0c141.385 0 256-114.616 256-256V127.938A127.94 127.94 0 0 1 383.937.001h.025A128.037 128.037 0 0 1 512 128.039z'/%3e%3c/svg%3e");
+      // mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M544 544.002c0 123.713 100.288 224.001 224 224.001H0c123.712 0 224-100.288 224-224V384.01a160.008 160.008 0 0 1 160.009-160.009A159.994 159.994 0 0 1 544 383.995z'/%3e%3c/svg%3e");
+      mask-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' xml:space='preserve' style='fill-rule:evenodd%3bclip-rule:evenodd%3bstroke-linejoin:round%3bstroke-miterlimit:2' viewBox='0 0 768 768'%3e%3cpath d='M576 576.003a192 192 0 0 0 192 192H0a192 192 0 0 0 192-192V384.005a192.004 192.004 0 0 1 192.004-192.003h.008a192 192 0 0 1 135.757 56.231A192 192 0 0 1 576 383.989z'/%3e%3c/svg%3e");
+      mask-repeat: no-repeat;
     }
+  }
+
+  .dropdown-caret {
+    display: none;
   }
 
   .active > a span {
@@ -677,15 +691,11 @@ const Items = depth ? Fragment : "div";
     flex-direction: row;
     text-decoration: none;
     color: rgb(var(--header-color));
-    cursor: default;
+    cursor: pointer;
   }
 
   a:hover span {
     background-color: rgba(0, 0, 0, 0.1);
-  }
-
-  a[href] {
-    cursor: pointer;
   }
 
   a[href]:hover span {
